# Image-Processing

eremenko_s_v/: CMakeLists.txt  build.vs.2019.cmake
eremenko_s_v/prj.labs/: CMakeLists.txt
eremenko_s_v/prj.labs/ControlWork/: CMakeLists.txt  ControlWork.cpp  task.report.md.in.txt
eremenko_s_v/prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
eremenko_s_v/prj.labs/lab02/: lab02.cpp  lab02.report.md.in.txt
eremenko_s_v/prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
eremenko_s_v/prj.labs/lab04/: lab04.cpp  lab04.report.md.in.txt
